--- a/lession/methods/pom.xml
+++ b/lession/methods/pom.xml
@@ -16,6 +16,14 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>lt.codeacademy</groupId>
+      <artifactId>console-printer</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
