--- a/lession/db/paskaita5-6-jdbc/pom.xml
+++ b/lession/db/paskaita5-6-jdbc/pom.xml
@@ -16,6 +16,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <com.h2database.h2.version>2.1.210</com.h2database.h2.version>
+    <junit.version>4.11</junit.version>
   </properties>
 
   <dependencies>
@@ -23,13 +25,13 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>2.1.210</version>
+      <version>${com.h2database.h2.version}</version>
     </dependency>
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
