--- a/lession/db/pom.xml
+++ b/lession/db/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <com.h2database.h2.version>2.1.210</com.h2database.h2.version>
+        <org.postgresql.postgresql.version>42.3.3</org.postgresql.postgresql.version>
         <junit.version>4.11</junit.version>
     </properties>
 
@@ -28,6 +29,11 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${com.h2database.h2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${org.postgresql.postgresql.version}</version>
             </dependency>
 
             <dependency>
