--- a/lession/db/paskaita5-6-jdbc/src/main/resources/database.properties
+++ b/lession/db/paskaita5-6-jdbc/src/main/resources/database.properties
@@ -1,3 +1,3 @@
 database.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 database.jdbc.user=postgres
-database.jdbc.password=
+database.jdbc.password=a
