[db] [5 paskaita] add Employee entity and refactor code into packages

--- a/lession/db/pom.xml
+++ b/lession/db/pom.xml
@@ -35,6 +35,13 @@
                 <artifactId>postgresql</artifactId>
                 <version>${org.postgresql.postgresql.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.22</version>
+                <scope>provided</scope>
+            </dependency>
+
 
             <dependency>
                 <groupId>junit</groupId>
