--- a/lession/db/paskaita5-6-jdbc/pom.xml
+++ b/lession/db/paskaita5-6-jdbc/pom.xml
@@ -29,6 +29,11 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
