--- a/lession/db/hibernate/pom.xml
+++ b/lession/db/hibernate/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>lt.codeacademy.db</groupId>
+        <artifactId>codeacademy-db</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>lt.codeacademy</groupId>
     <artifactId>hibernate</artifactId>
     <version>1.0-SNAPSHOT</version>
